--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2020-08-25 Azael Reyes <azael.devel@gmail.com>
 0.5.0-alpha
+	- Cambiar a esquema basado en fd interno.
 	- Refactory de Apishell, cd, ls, mkdir.
-	- 
 
 2020-08-25 Azael Reyes <azael.devel@gmail.com>
 0.1.0-alpha
@@ -9,4 +9,3 @@
 	- Implemetacion para ls
 	- Implemetacion para cd
 	- Implemetacion para mkdir
-
